--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,12 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: BUMZAIN
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: where
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
 #
 # Flags below are optional
 #
@@ -21,7 +19,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/Bumjin-Kim/BUMZANI.github.jo
   instagram:
   linkedin:
   pinterest:
